--- a/app.json
+++ b/app.json
@@ -20,7 +20,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.nandhu29.DemoProject"
+      "package": "com.nandhu29.DemoProject",
+      "permissions": ["INTERNET"]
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -28,7 +29,8 @@
     "extra": {
       "eas": {
         "projectId": "e5d56616-bc98-43a0-bd28-6d7a560a1a52"
-      }
+      },
+      "API_URL": "http://ec2-54-166-185-60.compute-1.amazonaws.com:8080"
     },
     "plugins": [
       "expo-video"
