--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-API_URL=http://ec2-98-83-136-226.compute-1.amazonaws.com:8000
+NODE_ENV =http://ec2-98-83-136-226.compute-1.amazonaws.com:8000
+REACT_API_URL =http://ec2-98-83-136-226.compute-1.amazonaws.com:8000
