--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "babel-plugin-inline-dotenv": "^1.7.0",
     "expo": "~52.0.31",
     "expo-av": "~15.0.1",
+    "expo-dev-client": "~5.0.12",
     "expo-document-picker": "~13.0.1",
     "expo-file-system": "^18.0.4",
-    "expo-secure-store": "~14.0.1",
+    "expo-secure-store": "^14.0.1",
     "expo-status-bar": "~2.0.0",
     "expo-video": "~2.0.2",
     "lottie-react-native": "7.1.0",
@@ -43,8 +44,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.8.2",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-dev-client": "~5.0.12"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
